# robucar

./: .gitlab-ci.yml  AUTHORS  README.md  robucar.repos  robucar_public.repos
robucar/: CMakeLists.txt  package.xml
robucar_bringup/: CMakeLists.txt  README.md  package.xml
robucar_bringup/config/: controller_manager.yaml  mobile_base_controller.yaml
robucar_bringup/launch/: robucar.launch.py  robucar_base.launch.py  robucar_gazebo.launch.py  robucar_live.launch.py  robucar_teleop.launch.py  robucar_test.launch.py
robucar_bringup/python/: robucar_bringup.py
robucar_bringup/scripts/: urdf_description.py
robucar_bringup/test/: test_urdf_description.py
robucar_description/: CMakeLists.txt  README.md  package.xml
robucar_description/config/: aroco.yaml  robucar.yaml  teleop.yaml
robucar_description/launch/: view_robucar.launch.py  view_robucar.launch.xml
robucar_description/meshes/: wheel.dae
robucar_description/python/: robucar_description.py
robucar_description/ros2_control/: robucar.ros2_control.urdf.xacro  robucar.ros2_control.xacro
robucar_description/test/: test_robucar_description.py
robucar_description/urdf/: robucar.urdf.xacro  robucar.xacro
robucar_description/urdf/ros2_control/: robucar.ros2_control.urdf.xacro
robucar_description/urdf/visual/: arms.xacro  chassis.xacro  wheels.xacro
robucar_hardware/: CMakeLists.txt  README.md  package.xml  robucar_hardware.xml
robucar_hardware/include/robucar_hardware/: robucar_hardware.hpp
robucar_hardware/include/robucar_hardware/communication/: framepure.hpp  pure_client.hpp  pure_interface.hpp
robucar_hardware/src/: robucar_hardware.cpp
robucar_hardware/src/communication/: framepure.cpp  pure_client.cpp  pure_devices.cpp  pure_interface.cpp
