<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robucar</name>
  <version>0.0.0</version>
  <description>The aroco stack</description>

  <author email="jean.laneurit@inrae.fr">Jean Laneurit</author>
  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robucar_hardware</exec_depend>
  <exec_depend>robucar_bringup</exec_depend>
  <exec_depend>robucar_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
