<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robucar_bringup</name>
  <version>0.0.0</version>
  <description>Package with aroco launch files.</description>

  <author email="jean.laneurit@inrae.fr">Jean Laneuerit</author>
  <maintainer email="jean.laneurit@inrae.fr">Jean Laneuerit</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robucar_description</exec_depend>
  <exec_depend>romea_mobile_base_description</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
